2006-07-14  Derek Atkins  <derek@ihtfp.com>

	* configure.in:
	* autogen.sh:
	  make sure that po/POTFILES.in exists so configure doens't complain.

	* configure.in:
	  check for (g-wrap gw-glib-spec) instead of (g-wrap) #347404.

2006-07-14  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome/schemas/Makefile.am: Add
	  apps_gnucash_scheduled_transctions.schemas.in. Fixes #340641.

	* src/register/ledger-core/split-register-control.c:
	* src/register/ledger-core/split-register-model.c: Let
	  GtkMessageDialog render the headers of two warnings in bold
	  font.

2006-07-13  Andreas Köhler  <andi5.py@gmx.net>

	* doc/tip_of_the_day.list.in:
	* lib/libqof/backend/file/qsf-backend.c:
	* src/gnome-search/search.glade:
	* src/gnome-utils/druid-gnc-xml-import.c:
	* src/gnome-utils/glade/preferences.glade:
	* src/gnome-utils/gnc-file.c:
	* src/gnome/schemas/apps_gnucash_general.schemas.in:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/gnc-plugin-page-register.c:
	* src/import-export/import-provider-format.glade:
	* src/report/report-system/report.scm: String fixes that have
	  been delayed due to the string freeze.

	* src/gnome/glade/account.glade: In the account dialog, do not
	  expand the upper left entries when the window is resized.
	  Automatic scrollbars for the notes field.

2006-07-12  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Group.c:
	  Allow account-separator character in account names (#347321).
	  Revert to previous behavior of xaccGetAccountFromFullName()
	  which was changed in r13467 when the function was restructured.
	  This patch returns to the old behavior (but uses the new
	  function structure).

2006-07-09  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 2.0.0
	* src/gnome-utils/glade/totd.glade: Removed 1.8 references
	* doc/README.OFX: Removed 1.8 references
	* doc/tip_of_the_day.list.in: Removed 1.8 references
	* doc/README.german: Removed 1.8 references